<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="action_example">Example action</string>
    <string name="btn_save">Save</string>
    <string name="btn_accept_dialog">OK</string>

    <!-- Gospel Fragment -->
    <string name="saintOfTheDay">Saint of the Day</string>
    <string name="gospel">Gospel</string>

    <!-- Prayers -->
    <string name="empty_prayer_list">The list of Prayers is empty</string>
    <string name="no_prayer_id">Prayer not found</string>
    <string name="new_prayer">New Prayer</string>
    <string name="edit_prayer">Edit Prayer</string>
    <string name="new_prayer_condensed">New</string>
    <string name="edit_prayer_condensed">Edit</string>
    <string name="delete_prayer">Delete Prayer</string>
    <string name="delete_prayer_condensed">Delete</string>
    <string name="prayer_title">Title</string>
    <string name="prayer_text">Prayer</string>
    <string name="prayer_category">Categories</string>
    <string name="prayer_category_selection">Select category…</string>
    <string name="save_prayer_success">Prayer saved</string>
    <string name="save_prayer_error">Error saving Prayer</string>

    <!-- Categories -->
    <string name="empty_category_list">The list of Categories is empty</string>
    <string name="no_category_id">Category not found</string>
    <string name="new_category">New Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="new_category_condensed">New</string>
    <string name="edit_category_condensed">Edit</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_category_condensed">Delete</string>
    <string name="category_name">Category Name</string>
    <string name="save_category_success">Category saved</string>
    <string name="save_category_error">Error saving Category</string>

</resources>
