<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.flores.nico.catholicprayers.ViewCategoryActivity">
    <item android:id="@+id/edit_prayer_menu_item"
          android:title="@string/edit_category"
          android:titleCondensed="@string/edit_category_condensed"
          android:icon="@android:drawable/ic_menu_edit"
          android:showAsAction="withText|ifRoom"/>
    <item android:id="@+id/delete_prayer_menu_item"
          android:title="@string/delete_category"
          android:titleCondensed="@string/delete_category_condensed"
          android:showAsAction="withText|ifRoom"
          android:icon="@android:drawable/ic_menu_delete"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
