<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.flores.nico.catholicprayers.NewPrayerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prayer_title"
        android:id="@+id/prayer_title_tv_activity_new_prayer"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/prayer_title_et_activity_new_prayer"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/prayer_title_et_activity_new_prayer"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/prayer_title_tv_activity_new_prayer"
        android:layout_toEndOf="@+id/prayer_title_tv_activity_new_prayer"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textAutoComplete|textAutoCorrect|textCapSentences"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prayer_text"
        android:id="@+id/prayer_text_tv_activity_new_prayer"
        android:layout_below="@+id/prayer_title_et_activity_new_prayer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textCapSentences|textAutoComplete|textAutoCorrect"
        android:ems="10"
        android:id="@+id/prayer_text_et_activity_new_prayer"
        android:layout_below="@+id/prayer_text_tv_activity_new_prayer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/new_prayer_btn_activity_new_prayer"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:id="@+id/new_prayer_btn_activity_new_prayer"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="newPrayerButton"/>

</RelativeLayout>
